--- a/contacto.html
+++ b/contacto.html
@@ -56,10 +56,20 @@
     </header>
     <!--Cierre de Nav Boostrap-->
     <main>
-        <p>Ponete en contacto con nosotras y elegi alguna de nuestras tazas diferentes, un desayuno o regalos unicos.</p>
 
-        <h1 class="h1Hijo4">Contacto Puebloalto</h1>
-        <section>
+         <!--Portada Productos-->
+         <div class="primeraSeccionProductos">
+            <div class="titulosPortada">
+                            
+                <h1 class="h1Padre">Contacto Puebloalto</h1>
+                <p class="animate__animated animate__fadeIn"><p>Ponete en contacto con nosotras y elegi un regalo unico y diferente.</p>
+
+            </div>
+        </div>
+        <!--Fin Portada-->
+
+
+        <section class="contacto">
             <div class="container">
 
                 <div class="mb-3">
@@ -122,7 +132,7 @@
 
     </main>
     <footer>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/Puebloalto-Un-regalo-diferente-1222801617748192/"><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-whatsapp"></i></a>
     </footer>
