--- a/nosotros.html
+++ b/nosotros.html
@@ -55,37 +55,36 @@
     </header>
 
     <main class="nosotros">
-        <h1 class="h1Hijo1">Conoce a Puebloalto</h1>
 
-        <section>
+         <!--Portada Productos-->
+         <div class="primeraSeccionContacto">
+            <div class="titulosPortada">
+                <h1 class="h1Padre">Conoce a Puebloalto</h1>
+            </div>
+        </div>
+        <!--Fin Portada-->
 
-            <div class="sobreNosotros-container">
-                <p class="nosotros__container-parrafo">Nosotras somos gaby y ale o Ale y Gaby como quieran. Y puebloalto
-                    un regalo diferente es nuestra creacion.
-                    Comenzamos en 2008 con un par de cursos de vitrofusion y pintura sobre porcelana 2 pinceles
-                    y un gomin
-                    Nos encanto las artes del tercer fuego que hicimos el profesorado de pintura sobre porcelana
-                    en el Instituto Grassi.
-                    Creciamos y nos seguiamos capacitando en distintas areas por eso la diversidad de nuestros
-                    regalos podes tener una vela de soja como una caja de madera pintada bellamente.
-                    Nuestro objetivo principal desde un comienzo fue la calidad de producto la atencion a nuestros
-                    clientes y una entrega envuelta para regalo.
-                    Nuestra distincion no es solo la personalizacion del objeto con el nombre sino es captar la
-                    escencia del regalo que quiere nuestro cliente. Entonces nuestras tazas, cerealeros o platos son
-                    unicos.
-                </p>
+        <section id="pantalla-dividida">
+            <div class="izquierdaNosotras">
+                <p class="pIzquierdaNosotras">Nosotras somos gaby y ale o Ale y Gaby como quieran. Y puebloalto un regalo diferente es nuestra creacion.
+                    Comenzamos en 2008 con un par de cursos de vitrofusion y pintura sobre porcelana 2 pinceles y un gomin 
+                    Nos encanto las artes del tercer fuego que hicimos el profesorado de pintura sobre porcelana en el Instituto Grassi.
+                    Creciamos y nos seguiamos capacitando en distintas areas por eso la diversidad de nuestros regalos podes tener una vela de soja como una caja de madera pintada bellamente.
+                    Nuestro objetivo principal desde un comienzo fue la calidad de producto la atencion a nuestros clientes y una entrega envuelta para regalo.
+                    Nuestra distincion no es solo la personalizacion del objeto con el nombre sino es captar la escencia del regalo que quiere nuestro cliente. Entonces nuestras tazas, cerealeros o platos son unicos.</p>
             </div>
 
-            <div class="fotoNosotros">
-                <img class="imgNosotros" src="img/pareja.jpg" alt="Foto de pareja">
+            <div class="derechaNosotras">
+                <img src="img/gabyyale.jpeg" alt="Gabriela y Alejandra">
             </div>
+
         </section>
 
     </main>
 
 
     <footer>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/Puebloalto-Un-regalo-diferente-1222801617748192/"><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-whatsapp"></i></a>
     </footer>
