--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </main>
 
     <footer>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/Puebloalto-Un-regalo-diferente-1222801617748192/"><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-whatsapp"></i></a>
     </footer>
